hphp/test/zend/good/ext/standard/tests/file/readfile_variation10.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip Not for Windows");
}
